Focusing or hovering over a link in an OOPIF should show a status bubble

Bug: 807776
Change-Id: I6219d7a8bc5a4b2fb608dfde1d0859739a35949f
Reviewed-on: https://chromium-review.googlesource.com/898434
Commit-Queue: Łukasz Anforowicz <lukasza@chromium.org>
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535104}
Former-commit-id: fd707147cc193f8ea99c7258e2f2e71b857d3fb1